--- a/Resources/translations/widget.fr.yml
+++ b/Resources/translations/widget.fr.yml
@@ -1,3 +1,3 @@
-formalibre_announcer_widget: annoucement widget
-formalibre_seeker_widget: seeker widget
-formalibre_admin_widget: admin widget
+formalibre_admin_widget: 'admin widget'
+formalibre_announcer_widget: 'annoucement widget'
+formalibre_seeker_widget: 'seeker widget'
