--- a/Resources/translations/job.fr.yml
+++ b/Resources/translations/job.fr.yml
@@ -54,8 +54,8 @@ no_announcer: 'Aucun chef d''établissement'
 no_community: 'Aucune communauté'
 no_job_offer: 'Aucune offre d''emploi'
 no_pending_announcer: 'Aucun chef d''établissement en attente'
-pending_announcement_form_message: 'que dois-je mettre ici aussi ?'
+pending_announcement_form_message: 'Inscrivez votre établissement'
 pending_announcers: 'Chefs d''établissement en attente'
 pending_announcers_managemnet: 'Gestion des chefs d''établissements en attente'
 registration_number: Matricule
-seeker_form_message: 'que dois-je mettre ici ?'
+seeker_form_message: 'Détachement vers la Fédération Wallonie-Bruxelles'
