--- a/Resources/translations/job.fr.yml
+++ b/Resources/translations/job.fr.yml
@@ -44,10 +44,10 @@ job_offer_creation: 'Création d''une offre d''emploi'
 job_offer_edition: 'Modifier une offre d''emploi'
 job_offer_form_expirationDate: 'Date d''expiration'
 job_offers_list: 'Liste des offres d''emplois'
-job_request_creation: 'Effectuer une postulation'
-job_request_edition: 'Modifier une postulation'
+job_request_creation: 'Ajouter un CV'
+job_request_edition: 'Modifier un CV'
 job_request_form_expirationDate: 'Date d''expiration'
-job_requests_list: 'Mes postulations'
+job_requests_list: 'C.V. en %community%'
 level: Niveau
 my_cv: 'Mes CVs'
 my_job_offers: 'Mes offres d''emplois'
