--- a/Resources/translations/job.fr.yml
+++ b/Resources/translations/job.fr.yml
@@ -65,3 +65,4 @@ pending_announcers: 'Chefs d''établissement en attente'
 pending_announcers_managemnet: 'Gestion des chefs d''établissements en attente'
 registration_number: Matricule
 seeker_form_message: 'Détachement vers la Fédération Wallonie-Bruxelles'
+show_job_offers: 'Voir les offres d''emplois'
