Update seeker & announcer entities

--- a/Resources/translations/job.fr.yml
+++ b/Resources/translations/job.fr.yml
@@ -14,7 +14,7 @@ announcers_creation: 'Ajout des chefs d''établissement'
 announcers_management: 'Gestion des chefs d''établissements'
 announcers_management_menu: 'Gestion des chefs d''établissements'
 announcers_managemnet: 'Gestion des chefs d''établissement'
-candidate_for: 'Candidat pour'
+candidate_from: 'Candidat de'
 communities_management: 'Gestion des communautés'
 community: Communauté
 community_creation: 'Création d''une communauté'
