--- a/Resources/translations/job.fr.yml
+++ b/Resources/translations/job.fr.yml
@@ -7,6 +7,7 @@ application_date: Date d'application
 add_announcers: 'Ajouter des chefs d''établissement'
 add_community: 'Ajouter une communauté'
 add_cv: 'Ajouter un CV'
+adress: Addresse
 administrators: Administrateurs
 allow_notification_for_new_job_request: 'Activer les notifications'
 announcers: 'Chefs d''établissement'
