--- a/Resources/translations/job.nl.yml
+++ b/Resources/translations/job.nl.yml
@@ -7,7 +7,7 @@ add_announcers: add_announcers
 add_community: add_community
 add_cv: add_cv
 administrators: administrators
-adress: Adress
+adress: Adres
 allow_notification_for_new_job_request: allow_notification_for_new_job_request
 announcers: announcers
 announcers_creation: announcers_creation
