--- a/Resources/translations/platform.de.yml
+++ b/Resources/translations/platform.de.yml
@@ -1,2 +1,2 @@
-announcers: announcers
-first_name: Vorname
+password_verification: Confirmation du mot de passe
+Captcha: Veuillez recopier le captcha
