--- a/Resources/translations/widget.de.yml
+++ b/Resources/translations/widget.de.yml
@@ -1,3 +1,3 @@
-formalibre_admin_widget: formalibre_admin_widget
-formalibre_announcer_widget: formalibre_announcer_widget
-formalibre_seeker_widget: formalibre_seeker_widget
+formalibre_admin_widget: 'admin widget'
+formalibre_announcer_widget: 'annoucement widget'
+formalibre_seeker_widget: 'seeker widget'
