--- a/Resources/translations/province.fr.yml
+++ b/Resources/translations/province.fr.yml
@@ -1,11 +1,12 @@
 antwerpen: Anvers
 limburg: Limbourg
-oost_vlanderen: Flandre orientale
-vlaams_brabant: Brabant flamand
-west_vlaanderen: Frandre occidentale
-brabant_wallon: Brabant wallon
+oost_vlanderen: Flandre Prientale
+vlaams_brabant: Brabant Flamand
+west_vlaanderen: Frandre Occidentale
+brabant_wallon: Brabant Wallon
 hainaut: Hainaut
 liege: Liege
 luxembourg: Luxembourg
 namur: Namur
-province: Province
+brussels: Bruxelles
+province: Région
